--- a/src/app/veiculo/index/index.component.html
+++ b/src/app/veiculo/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>CRUD de veiculos</h1>
+    <h1>CRUD de veículos</h1>
     <a href="#" routerLink="/veiculo/create/" class="mb-2 btn btn-success">Criar</a>
     <div *ngIf="message" class="alert alert-info alert-dismissible fade show" role="alert">
       {{ message }}
